src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_path_property_overrides.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/other.project.json
    - /foo/default.project.json
  context:
    emit_legacy_scripts: true
  middleware: project
  specified_id:
    Ref: "00000000000000000000000000000000"
name: path-property-override
class_name: StringValue
properties:
  Value:
    String: Changed
children: []

